...
                                <color key="backgroundColor" red="0.062214739620000001" green="0.56600600479999996" blue="0.74111294750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="63" id="FoZ-zf-zDR"/>
                                    <constraint firstAttribute="height" constant="44" id="azu-mg-oCZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="ConnectDevice:" destination="pSu-SS-q7W" eventType="touchUpInside" id="6Ie-ef-RVU"/>
                                    <action selector="ConnectDevice:" destination="bND-km-8Vy" eventType="touchUpInside" id="Dn9-li-ROq"/>
                                </connections>
...
